# tree-sitter-aconf

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  language.toml  package.json  pyproject.toml  sample.aconf  setup.py  tree-sitter.json
bindings/c/: tree-sitter-aconf.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_aconf/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterAconf/: aconf.h
bindings/swift/TreeSitterAconfTests/: TreeSitterAconfTests.swift
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
